﻿Improved SpellProjectile
Implemented Shielding Spell
Implemented Fireball Spell
Implemented Summoning Spell
Implemented Cleansing Spell
